changed nav properties to fix spacing issue

--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
 
 #navigation div a {
 	color:#f2f2f2
-	padding: 15px 17px;
+	padding: 14px 16px;
 	text-decoration: none;
-	font-size: 15px;
+	font-size: 17px;
 }
 
 #navigation div a:hover {
